--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,7 @@
 ---
+import Footer from "../components/Footer.astro"
+import Header from "../components/Header.astro"
+import "../styles/global.css"
 
 ---
 
@@ -11,6 +14,13 @@
 		<title>Astro</title>
 	</head>
 	<body>
+    <Header />
 		<h1>Astro Blog</h1>
+		<Footer />
+		<script>
+			document.querySelector(".hamburger")?.addEventListener("click", () => {
+				document.querySelector(".nav-links")?.classList.toggle("expanded");
+			})
+		</script>
 	</body>
 </html>
