--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,32 +1,27 @@
 ---
-import Footer from "../components/Footer.astro"
-import Header from "../components/Header.astro"
+import BlogPost from "../components/BlogPost.astro";
+import BaseLauout from "../layouts/BaseLayout.astro"
 import "../styles/global.css"
+const pageTitle = "Add Blog"
 
+const allPosts = await Astro.glob("../pages/posts/*.md");
+// console.log();
 ---
 
-<html lang="ja">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Blog</title>
-	</head>
-	<body>
-		<Header />
-		<h1>ブログ投稿</h1>
+<BaseLauout pageTitle{pageTitle}>
 		<h2>このページは今後学習していく内容をポストしていきます。</h2>
     <ul>
-      <li><a>href="./posts/post-1"</a>記事1</li>
-      <li><a>href="./posts/post-2"</a>記事2</li>
-      <li><a>href="./posts/post-3"</a>記事3</li>
+      <!-- <li><a href="./posts/post-1">記事1</a></li>
+      <li><a href="./posts/post-2">記事2</a></li>
+      <li><a href="./posts/post-3">記事3</a></li> -->
+			{
+				allPosts.map((post) => (
+					// <li>
+					// 	<a href={`${post.url}`}>{post.frontmatter.title}</a>
+					// </li>
+				  <BlogPost url={post.url} title={post.frontmatter.title}/>
+				))
+			}
+
     </ul>
-		<Footer />
-		<script>
-			document.querySelector(".hamburger")?.addEventListener("click", () => {
-				document.querySelector(".nav-links")?.classList.toggle("expanded");
-			})
-		</script>
-	</body>
-</html>
+</BaseLauout>
