--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,14 @@
 ---
+import Greeting from "../components/Greeting"
 import BaseLauout from "../layouts/BaseLayout.astro"
 const pageTitle = "Astro Blog"
+//FrontMatterと呼び、ここの記述はサーバー側で実装される。
 ---
 
 <BaseLauout pageTitle={pageTitle}>
 	<h2>ブログのサブタイトル</h2>
-</BaseLauout_>
+	<Greeting
+	  client:load
+	  messages={["こんにちは！","Hola!","Hello!"]} 
+	/>
+</BaseLayout_>
