--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -6,30 +6,27 @@ export async function getStaticPaths() {
 
   const allPosts = await Astro.glob("../posts/*.md")
 
-  return [
-    {
-      params: {
-        tag: "astro",
-      },
-      props: { posts: allPosts },
-    },
-    {
-      params: {
-        tag: "blog",
-      },
-      props: {  posts: allPosts },
-    },
-    {
-      params: {
-        tag: "programming",
-      },
-      props: {  posts: allPosts },
-    },
+  const uniqueTags = [
+    ...new Set(allPosts.map((post) => post.frontmatter.tags).flat())  
   ];
+  console.log(uniqueTags)
+
+  return uniqueTags.map((tag) => {
+    const filterdPosts = allPosts.filter((post) =>
+    post.frontmatter.tags?.includes(tag),
+  );
+
+  return{  params: {tag: tag},
+      props: { posts: filterdPosts },
+    }
+  });
 }
 
 const { tag } = Astro.params;
 const { posts } = Astro.props;
+// const filterdPosts = posts.filter((post) =>
+//   post.frontmatter.tags?.includes(tag),
+// );
 ---
 
 <BaseLayout pageTitle={tag}>
