--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@ import Social from "./Social.astro";
 </style>
 
 <footer>
-  <Social platform = "twitter" username = "Shin_Engineer" />
-  <Social platform = "github" = "Shin_shibainu" />
-  <Social platform = "youtube" username = "Shin_Enginner" />
+  <Social platform = "twitter" username = "aaa_Engineer" />
+  <Social platform = "github" = "aaa" />
+  <Social platform = "youtube" username = "aaa_Enginner" />
 </footer>
