--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,27 +1,22 @@
 ---
+import { getCollection } from "astro:content";
 import BlogPost from "../components/BlogPost.astro";
-import BaseLauout from "../layouts/BaseLayout.astro"
-import "../styles/global.css"
-const pageTitle = "Add Blog"
+import BaseLayout from "../layouts/BaseLayout.astro";
+const pageTitle = "ブログ投稿";
 
-const allPosts = await Astro.glob("../pages/posts/*.md");
-// console.log();
+const allPosts = await getCollection("posts");
 ---
 
-<BaseLauout pageTitle{pageTitle}>
-		<h2>このページは今後学習していく内容をポストしていきます。</h2>
-    <ul>
-      <!-- <li><a href="./posts/post-1">記事1</a></li>
-      <li><a href="./posts/post-2">記事2</a></li>
-      <li><a href="./posts/post-3">記事3</a></li> -->
-			{
-				allPosts.map((post) => (
-					// <li>
-					// 	<a href={`${post.url}`}>{post.frontmatter.title}</a>
-					// </li>
-				  <BlogPost url={post.url} title={post.frontmatter.title}/>
-				))
-			}
-
-    </ul>
-</BaseLauout>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>このブログページは今後学習していく内容をポストしていきます。</h2>
+  <ul>
+    <!-- <li><a href="/posts/post-1">記事1</a></li>
+    <li><a href="/posts/post-2">記事2</a></li>
+    <li><a href="/posts/post-3">記事3</a></li> -->
+    {
+      allPosts.map((post) => (
+        <BlogPost url={`/posts/${post.slug}`} title={post.data.title} />
+      ))
+    }
+  </ul>
+</BaseLayout>
