--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,18 +1,16 @@
 ---
+import { getCollection } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
-const pageTitle = "タグ一覧ページ"
+const pageTitle = "タグ一覧ページ";
 
-const allPosts = await Astro.glob("../posts/*.md")
+const allPosts = await getCollection("posts");
 
-const tags = [
-    ...new Set(allPosts.map((post) => post.frontmatter.tags).flat())  
-  ];
-
+const tags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
 ---
 
 <style>
   a {
-    color: #00639f;
+    color: #00539f;
   }
   .tags {
     display: flex;
@@ -28,13 +26,14 @@ const tags = [
   }
 </style>
 
-<BaseLayout pagetitle={pageTitle}>
+<BaseLayout pageTitle={pageTitle}>
   <div class="tags">
-    {tags.map((tag) => (
-      <p class="tag">
-        <a href={`/tags/${tag}`}>{tag}</a>
-      </p>
-    ))
+    {
+      tags.map((tag) => (
+        <p class="tag">
+          <a href={`/tags/${tag}`}>{tag}</a>
+        </p>
+      ))
     }
   </div>
 </BaseLayout>
