--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
 html {
-  background-color: #f1f5f0;
+  background-color: #f0f4f9;
   font-family: sans-serif;
 }
 
@@ -32,7 +32,7 @@ body {
   width: 100%;
   top: 5rem;
   left: 48px;
-  background-color: #ff9756;
+  background-color: #ff9776;
   display: none;
   margin: 0;
 }
@@ -55,7 +55,7 @@ body {
   display: block;
 }
 
-@media screen and (min-width: 636px ) {
+@media screen and (min-width: 636px) {
   .nav-links {
     margin-left: 5em;
     display: block;
@@ -69,6 +69,7 @@ body {
     padding: 15px 20px;
   }
 
-  
+  .hamburger {
+    display: none;
+  }
 }
-
